subo Practica 7 paquete Practica7, ficheros Practica7.java y ErrorderutaException.java comentado en javadoc

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /Practica7/nbproject/private/
 /Practica7/build/
+/pruebaConectionDB/nbproject/private/
+/pruebaConectionDB/build/
+/Practica8/nbproject/private/
+/Practica7/dist/
