--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /pruebaConectionDB/nbproject/private/
 /pruebaConectionDB/build/
 /Practica8/nbproject/private/
+/pruebaconexionDBPostgres/nbproject/private/
+/pruebaconexionDBPostgres/build/
+/interfacesSwing/nbproject/private/
+/interfacesSwing/build/
